--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-input-mask": "^2.0.4",
+    "superstruct": "^1.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
