--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
     "react-input-mask": "^2.0.4",
+    "react-table": "^7.8.0",
     "superstruct": "^1.0.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.20",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
