--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@testing-library/react": "^16.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
